--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ I designed and implemented several vehicular applications such as Centralized Tr
 
  <!-- Other people may like it too! -->
      <div>
-    <p style="font-size:0.8em; float:right; color:#ababab;"> Thanks to <u> <a style="color:#ababab" target="_blank" href="https://mavroud.is/">Vasilios Mavroudis</a></u> for the <u><a style="color:#ababab" target="_blank" href="https://github.com/mavroudisv/plain-academic">template</a></u>! Here is the <u><a style="color:#ababab" target="_blank" href="https://github.com/alisiahkoohi/alisiahkoohi.github.io">source of my homepage</a></u>.</p>
+    <p style="font-size:0.8em; float:right; color:#ababab;"> Thanks to <u> <a style="color:#ababab" target="_blank" href="https://mavroud.is/">Vasilios Mavroudis</a></u> for the <u><a style="color:#ababab" target="_blank" href="https://github.com/mavroudisv/plain-academic">template</a></u>!</p>
     </div>
     <!-- /.container -->
 
