--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ function switchTheme(e) {
 }
 
 
-const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
+const currentTheme = 'dark';
 
 if (currentTheme) {
     document.documentElement.setAttribute('data-theme', currentTheme);
