--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ input:checked + .slider:before {
 
       <div  style="text-align:left;">
         <br>
-        <p>I'm a PhD candidate in Computer Science at <a href=https://www.uta.edu>University of Texas at Arlington</a> where I'm being advised by <a href=http://vlm1.uta.edu/~athitsos/>Vassilis Athitsos</a>. I'm a member of <a href=http://vlm1.uta.edu/~athitsos/vlm/>VLM Research Lab</a>. I received my Masters degree in Computer Engineering from <a href=http://en.urmia.ac.ir>University of Urmia</a> in 2013.</p>
+        <p>I'm a PhD candidate in Computer Science at <a href=https://www.uta.edu>University of Texas at Arlington</a> under supervision of <a href=http://vlm1.uta.edu/~athitsos/>Vassilis Athitsos</a> in the <a href=http://vlm1.uta.edu/~athitsos/vlm/> Vision-Learning-Mining(VLM) Research Lab</a>. I received my Masters degree in Computer Engineering from <a href=http://en.urmia.ac.ir>University of Urmia</a> in 2013.</p>
 
         <p>
         My research interesets are in the areas of <i>Computer Vision</i> and <i>Deep Learning</i>. My current work focuses on developing deep learning methods for image restoration and enhancement problems. My past work was focused on face detection, verification, and clustering.</p>
