--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ input:checked + .slider:before {
       <div  style="margin-top:2vh; text-align:left;">
       <div style="font-family: Arial, Helvetica, sans-serif; font-size: 20px;"><b>Experiences</b></div><br>
         <b>Deep Learning Engineer Intern</b> (May 2019 - November 2019)<br>
-            <a href="https://wavecomp.ai">Wave Computing</a>, Campell, CA<br>
+            <a href="https://wavecomp.ai">Wave Computing</a>, Campbell, CA<br>
 I implemented a pipeline for enhanced emotion and face detection for retail store analysis. I also benchmarked the performance of different super-resolution methods as well as face detection methods. In addition, I utilized different object tracking methods such as YOLOv3 with deep SORT, and ROLO to track customers in the retail store application. 
       <br><br>
         <b>Graduate Teaching Assistant</b> (August 2015 - Present)<br>
