--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ input:checked + .slider:before {
 
       <div  style="text-align:left;">
         <br>
-        <p>I'm a PhD candidate in Computer Science at <a href=https://www.uta.edu>University of Texas at Arlington</a> under supervision of <a href=http://vlm1.uta.edu/~athitsos/>Vassilis Athitsos</a> in the <a href=http://vlm1.uta.edu/~athitsos/vlm/> Vision-Learning-Mining (VLM) Research Lab</a>. I received my Masters degree in Computer Engineering from <a href=http://en.urmia.ac.ir>University of Urmia</a> in 2013.</p>
+        <p>I hold a Ph.D. in Computer Science from the <a href=https://www.uta.edu>University of Texas at Arlington. </a> I have been doing my Ph.D. under the supervision of Dr. <a href=http://vlm1.uta.edu/~athitsos/>Vassilis Athitsos</a> in <a href=http://vlm1.uta.edu/~athitsos/vlm/> Vision-Learning-Mining (VLM) Research Lab</a>. I received my Master's degree in Computer Engineering from <a href=http://en.urmia.ac.ir>University of Urmia</a> in 2013.</p>
 
         <p>
         My research interesets are in the areas of <i>Computer Vision</i> and <i>Deep Learning</i>. My current work focuses on developing deep learning methods for image restoration and enhancement problems. My past work was focused on face detection, verification, and clustering.</p>
@@ -194,7 +194,9 @@ input:checked + .slider:before {
       <div class="">
         <div class="row">
           <h2 id="news">News Updates</h2>
-          <enlist class="enlist">April 2021: Will serve as a Program Committee member in <a href="https://www.isvc.net">ISVC 2021</a>!</enlist>
+          <enlist class="enlist">September 2021: Will serve as a Program Committee member in <a href="https://www.isvc.net">ISVC 2021</a>!</enlist>
+          <enlist class="enlist">July 2021: Will serve as a Paper Reviewer in <a href="https://icmi.acm.org/2021/">ICMI 2021</a>!</enlist>  
+          <enlist class="enlist">July 2021: Will serve as a Paper Reviewer in <a href="https://wacv2022.thecvf">WACV 2022</a>!</enlist>
           <enlist class="enlist">December 2020: Our paper on GAN-based image dehazing was accepted at <a href="http://www.visapp.visigrapp.org/?y=2021">VISAPP 2021</a>!</enlist>  
           <enlist class="enlist">September 2020: Our paper on benchmarking dehazing methods was accepted at ISVC 2020!</enlist> 
           <enlist class="enlist">August 2020: Will serve as a paper reviewer at <a href="https://wacv20.wacv.net">WACV 2020</a>!</enlist> 
