--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ input:checked + .slider:before {
       <div class="">
         <div class="row">
           <h2 id="news">News Updates</h2>
-          <enlist class="enlist">September 2021: Will serve as a Program Committee member in <a href="https://www.isvc.net">ISVC 2021</a>, <a href="https://icmi.acm.org/2021/">ICMI 2021</a>, and <a href="http://wacv2022.thecvf.com/">WACV 2022</a>!</enlist>
+          <enlist class="enlist">September 2021: Will serve as a Program Committee member in <a href="https://www.isvc.net">ISVC 2021</a>, <a href="https://icmi.acm.org/2021/">ICMI 2021</a>, and <a href="http://wacv2022.thecvf.com">WACV 2022</a>!</enlist>
           <enlist class="enlist">December 2020: Our paper on GAN-based image dehazing was accepted at <a href="http://www.visapp.visigrapp.org/?y=2021">VISAPP 2021</a>!</enlist>  
           <enlist class="enlist">September 2020: Our paper on benchmarking dehazing methods was accepted at ISVC 2020!</enlist> 
           <enlist class="enlist">August 2020: Will serve as a paper reviewer at <a href="https://wacv20.wacv.net">WACV 2020</a>!</enlist> 
