--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ input:checked + .slider:before {
 
       <div  style="text-align:left;">
         <br>
-        <p>I hold a Ph.D. in Computer Science from the <a href=https://www.uta.edu>University of Texas at Arlington. </a> I have been doing my Ph.D. under the supervision of Dr. <a href=http://vlm1.uta.edu/~athitsos/>Vassilis Athitsos</a> in <a href=http://vlm1.uta.edu/~athitsos/vlm/> Vision-Learning-Mining (VLM) Research Lab</a>. I received my Master's degree in Computer Engineering from <a href=http://en.urmia.ac.ir>University of Urmia</a> in 2013.</p>
+        <p>I hold a Ph.D. in Computer Science from the <a href=https://www.uta.edu>University of Texas at Arlington. </a> I have been doing my Ph.D. under the supervision of Dr. <a href=http://vlm1.uta.edu/~athitsos/>Vassilis Athitsos</a> in <a href=http://vlm1.uta.edu/~athitsos/vlm/> Vision-Learning-Mining (VLM) Research Lab</a>. I received my Master's degree in Computer Engineering from the <a href=http://en.urmia.ac.ir>University of Urmia</a> in 2013.</p>
 
         <p>
         My research interesets are in the areas of <i>Computer Vision</i> and <i>Deep Learning</i>. My current work focuses on developing deep learning methods for image restoration and enhancement problems. My past work was focused on face detection, verification, and clustering.</p>
