--- a/index.html
+++ b/index.html
@@ -273,6 +273,16 @@ In this work, we focus on automated face dataset generation from unlabeled image
             <br><u>Zahra Anvari</u> and Vassilis Athitsos
             <br><i>12th ACM International Conference on Pervasive Technologies Related to Assistive Environments (PETRA)</i>, June 2019.
           </blockquote>
+            
+          <blockquote class="blockquote">
+            <a href="files/">Transportation Routing in Urban Environments Using Updated Traffic Information Provided through Vehicular Communications<br>
+            </a>[<a href="files/Transportation Routing in Urban Environments.pdf">PDF</a>]
+            <br>Saleh Yousefi, Tofigh Abbasi, and <u>Zahra Anvari</u>  
+            <br><i>Journal of Treansportation Systems Engineering and Information Technology</i>,
+            <br>Volume 14, Issue 5, pages 23−36, October 2014.
+          </blockquote>
+
+            
         </div>
       </div>
     </div>
