--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ In this work, we focus on automated face dataset generation from unlabeled image
           </blockquote>
             
           <blockquote class="blockquote">
-            <a href="files/">Transportation Routing in Urban Environments Using Updated Traffic Information Provided through Vehicular Communications<br>
+            <a href="files/Transportation Routing in Urban Environments.pdf">Transportation Routing in Urban Environments Using Updated Traffic Information Provided through Vehicular Communications<br>
             </a>[<a href="files/Transportation Routing in Urban Environments.pdf">PDF</a>]
             <br>Saleh Yousefi, Tofigh Abbasi, and <u>Zahra Anvari</u>  
             <br><i>Journal of Treansportation Systems Engineering and Information Technology</i>,
