--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ In this work, we focus on automated face dataset generation from unlabeled image
             
           <blockquote class="blockquote">
             <a href="files/Transportation Routing in Urban Environments.pdf">Transportation Routing in Urban Environments Using Updated Traffic Information Provided through Vehicular Communications<br>
-            </a>[<a href="files/Transportation Routing in Urban Environments.pdf">PDF</a>]
+            </a>[<a href="files/Transportation Routing in Urban Environments.pdf">PDF</a>]<u>[<a href="files/saleh2014.txt" target="_blank">BibTeX</a>]</u>
             <br>Saleh Yousefi, Tofigh Abbasi, and <u>Zahra Anvari</u>  
             <br><i>Journal of Treansportation Systems Engineering and Information Technology</i>,
             <br>Volume 14, Issue 5, pages 23−36, October 2014.
